--- a/css/style.css
+++ b/css/style.css
@@ -34,24 +34,37 @@ button{
 main{
     height: calc(100vh - 100px);
     background-color: #00e064;
+  
 }
 
 .grid{
-    display: none;
+    
+    display: flex;
+    flex-wrap: wrap;
     border: #001533 2px solid;
-    width: 70%;
-    height: 70%;
+    width: 400px;
+    height: 400px;
     margin: 0 auto ; 
+    
 }
 
+.square{
+    width: calc(100% / 10);
+    border: 1px solid black;  
+}
+
+.square.clicked-true{
+    background-color: aqua;
+}
+
+.hidden{
+    display: none;
+}
 .visible{
     display: block;
 }
 
-.square{
-    
-    border: 1px solid black;
-}
+
 
 /* footer */
 footer{
